# rosdiscover-evaluation

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile-autoware  Dockerfile-evaluation  Dockerfile-i  Dockerfile-k  Dockerfile-k_4  Dockerfile-m  Dockerfile_6  Dockerfile_clean  Dockerfile_g  Dockerfile_no_build  INSTALL.html  INSTALL.rst  LICENSE  Makefile  Pipfile  README.html  README.md  README.rst  STATUS.html  STATUS.rst  all.sh  analysis.py  anonymize  container.sh  create_image.py  detect.sh  get_packages.py  guesswho  install.sh  obj.json  requirements.txt  rosinfereval.ipynb  rostimereval.ipynb  run.sh  run_rosdiscover.sh  (+6 more)
architecture-style/: ROSFam.acme
docker/: Dockerfile  Dockerfile.autoware  Dockerfile.runner  Dockerfile.single  Dockerfile_debug.autoware  build.sh  run.sh  setup.sh
results/: DataAnalysis.ipynb  RQ1.csv  RQ1_unreachable.csv  RQ1_unreachable_percent.csv  RQ2_architectural_elements.csv  RQ2_handwritten.csv  RQ3.csv  amcl.amcl.json  analog_devices.adis16470_node.json  analog_devices.adxl345_node.json  as.pacmod_interface.json  astar_planner.obstacle_avoid.json  astar_planner.obstacle_sim.json  astar_planner.velocity_set.json  astra_camera.astra_camera_node.json  astra_camera.astra_list_devices.json  astra_camera.astra_test_wrapper.json  astra_camera.astra_usb_reset.json  autorally_control.ConstantSpeedController.json  autorally_control.gpsWaypoint.json  autorally_control.joystickController.json  autorally_control.path_integral_bf.json  autorally_control.path_integral_monitor.json  autorally_core.CameraTrigger.json  (+521 more)
(+1805 files in other folders)
