[metadata]
name = ROSDiscover ICSA 2022 Evaluation
author = Tobias Duerschmid, Christopher Timperley, Bradley Schmerl
author_email = ctimperley@cmu.edu
url = https://github.com/rosqual/rosdiscover-evaluation
description = Scripts and systems for running ROSDiscover experiments
long_description = file: README.rst, LICENSE
license =
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3.9


[options]
python_requires = >= 3.9
install_requires =
  gitdb ~= 4.0.7
  smmap ~= 4.0.0
  GitPython ~= 3.1.18
  PyYAML ~= 5.3.1
  rosdiscover = {path = "./deps/rosdiscover", editable = true}
  roswire = {path = "./deps/roswire", editable = true}
  requests ~= *
  python-dateutil ~= *
  pyparsing ~= 2.4.7

package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 120
ignore = W605
per-file-ignores =
  src/noteful/__init__.py:E402,F401
  src/noteful/conversion/__init__.py:F401,F403
  src/noteful/db/__init__.py:F401
  src/noteful/templates/__init__.py:F401
  src/noteful/utils/__init__.py:F401

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[tox:tox]
envlist = py39

[testenv]
deps =
  -rrequirements.dev.txt
commands =
  mypy src
  flake8 src
  pytest
